--- a/src/common/style/globals.css
+++ b/src/common/style/globals.css
@@ -58,6 +58,12 @@ body {
   object-fit: cover;
 }
 
+.footer {
+  font-size: 1rem;
+  width: 100%;
+  text-align: center;
+}
+
 /* .right-content {
   position: relative;
   display: grid;
